--- a/0_FRONT_HTML+CSS/projetos/2_HTML+CSS+JS_COLORS/index.html
+++ b/0_FRONT_HTML+CSS/projetos/2_HTML+CSS+JS_COLORS/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll Website</title>
+    <title>Site Cores</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
         integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous" />
@@ -14,23 +14,23 @@
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="#home" id="navbar__logo">COLOR</a>
+            <a href="#home" id="navbar__logo">CORES</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span> <span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="#home" class="navbar__links" id="home-page">Home</a>
+                    <a href="#home" class="navbar__links" id="home-page">Início</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#about" class="navbar__links" id="about-page">About</a>
+                    <a href="#about" class="navbar__links" id="about-page">Sobre</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#services" class="navbar__links" id="services-page">Services</a>
+                    <a href="#services" class="navbar__links" id="services-page">Serviços</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="#sign-up" class="button" id="signup">Sign Up</a>
+                    <a href="#sign-up" class="button" id="signup">Entrar</a>
                 </li>
             </ul>
         </div>
@@ -39,9 +39,9 @@
     <!-- Hero Section -->
     <div class="hero" id="home">
         <div class="hero__container">
-            <h1 class="hero__heading">Choose your <span>colors</span></h1>
-            <p class="hero__description">Unlimited Possibilities</p>
-            <button class="main__btn"><a href="#">Explore</a></button>
+            <h1 class="hero__heading">Escolha suas <span>cores</span></h1>
+            <p class="hero__description">Infinitas Possibilidades</p>
+            <button class="main__btn"><a href="#">Explorar</a></button>
         </div>
     </div>
 
@@ -52,17 +52,17 @@
                 <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
             </div>
             <div class="main__content">
-                <h1>What do we do?</h1>
-                <h2>We help businesses scale</h2>
-                <p>Schedule a call to learn more about our services</p>
-                <button class="main__btn"><a href="#">Schedule Call</a></button>
+                <h1>O que nós fazemos?</h1>
+                <h2>Nós ajudamos a sua empresa</h2>
+                <p>Nos contate para aprender mais sobre nossos serviços</p>
+                <button class="main__btn"><a href="#"> <i class="fas fa-phone"></i> Chamar</a></button>
             </div>
         </div>
     </div>
 
     <!-- Services Section -->
     <div class="services" id="services">
-        <h1>Our Services</h1>
+        <h1>Nossos Serviços</h1>
         <div class="services__wrapper">
             <div class="services__card">
                 <h2>Custom Colorways</h2>
@@ -91,7 +91,7 @@
     <div class="main" id="sign-up">
         <div class="main__container">
             <div class="main__content">
-                <h1>Join Our Team</h1>
+                <h1>Junte-se ao nosso Time</h1>
                 <h2>Sign Up Today</h2>
                 <p>See what makes us different</p>
                 <button class="main__btn"><a href="#">Sign Up</a></button>
@@ -137,7 +137,7 @@
                 <div class="footer__logo">
                     <a href="/" id="footer__logo">COLOR</a>
                 </div>
-                <p class="website__rights">© COLOR 2020. All rights reserved</p>
+                <p class="website__rights">© COLOR 2022. All rights reserved</p>
                 <div class="social__icons">
                     <a href="/" class="social__icon--link" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="/" class="social__icon--link"><i class="fab fa-instagram"></i></a>
