--- a/0_FRONT_HTML+CSS/projetos/1_HTML_CSS_JS_WEBPAGE_FULL/tech.html
+++ b/0_FRONT_HTML+CSS/projetos/1_HTML_CSS_JS_WEBPAGE_FULL/tech.html
@@ -62,8 +62,8 @@
             <div class="main__content">
                 <h1>NOSSAS</h1>
                 <h2>TECNOLOGIAS</h2>
-                <p>HTML/CSS/JS+React|Native</p>
-                <p>PHP/Node/Python/Java/C++</p>
+                <p>HTML/CSS/JS+React</p>
+                <p>PHP/Node/Python/Java/C</p>
                 <p>MySQL/MongoDB</p>
                 <p>AWS/Heroku</p>
                 <!-- <button class="main__btn">
