--- a/0_FRONT_HTML+CSS/projetos/3_10 projetos em 1 hora JS Frontend/index.html
+++ b/0_FRONT_HTML+CSS/projetos/3_10 projetos em 1 hora JS Frontend/index.html
@@ -22,34 +22,34 @@
     <h3>Projects:</h3>
     <ul>
         <li>
-            <a target="_blank" href="auto-write-text/index.html">Auto Write Text</a>
+            <a target="_blank" href="auto-write-text/index.html">1) Auto Write Text</a>
         </li>
         <li>
-            <a target="_blank" href="background-changer/index.html">Background Changer</a>
+            <a target="_blank" href="background-changer/index.html">2) Background Changer</a>
         </li>
         <li>
-            <a target="_blank" href="carousel/index.html">Carousel</a>
+            <a target="_blank" href="carousel/index.html">3) Carousel</a>
         </li>
         <li>
-            <a target="_blank" href="dark-mode-toggle/index.html">Dark Mode Toggle</a>
+            <a target="_blank" href="dark-mode-toggle/index.html">4) Dark Mode Toggle</a>
         </li>
         <li>
-            <a target="_blank" href="hamburger/index.html">Hamburger</a>
+            <a target="_blank" href="hamburger/index.html">5) Hamburger</a>
         </li>
         <li>
-            <a target="_blank" href="popup/index.html">Popup</a>
+            <a target="_blank" href="popup/index.html">6) Popup</a>
         </li>
         <li>
-            <a target="_blank" href="purple-heart-rain/index.html">Purple Heart Rain</a>
+            <a target="_blank" href="purple-heart-rain/index.html">7) Purple Heart Rain</a>
         </li>
         <li>
-            <a target="_blank" href="sound-board/index.html">Sound Board</a>
+            <a target="_blank" href="sound-board/index.html">8) Sound Board</a>
         </li>
         <li>
-            <a target="_blank" href="toast-notification/index.html">Toast Notification</a>
+            <a target="_blank" href="toast-notification/index.html">9) Toast Notification</a>
         </li>
         <li>
-            <a target="_blank" href="zoom-effect/index.html">Zoom Effect</a>
+            <a target="_blank" href="zoom-effect/index.html">10) Zoom Effect</a>
         </li>
     </ul>
 
