--- a/0_FRONT_HTML+CSS/projetos/4_10 projetos em 10 horas JS Frontend/index.html
+++ b/0_FRONT_HTML+CSS/projetos/4_10 projetos em 10 horas JS Frontend/index.html
@@ -22,30 +22,30 @@
     <h3>Projects:</h3>
     <ul>
         <li>
-            <a target="_blank" href="countdown-timer/index.html">Countdown Timer</a>
+            <a target="_blank" href="countdown-timer/index.html">1) Countdown Timer</a>
         </li>
-        <li><a target="_blank" href="quiz-app/index.html">Quiz App</a></li>
+        <li><a target="_blank" href="quiz-app/index.html">2) Quiz App</a></li>
         <li>
-            <a target="_blank" href="recipe-app/index.html">Recipe App</a>
-        </li>
-        <li>
-            <a target="_blank" href="notes-app/index.html">Notes App</a>
-        </li>
-        <li><a target="_blank" href="todo-app/index.html">ToDo App</a></li>
-        <li>
-            <a target="_blank" href="movie-app/index.html">Movies App</a>
+            <a target="_blank" href="recipe-app/index.html">3) Recipe App</a>
         </li>
         <li>
-            <a target="_blank" href="github-profiles/index.html">GitHub Profiles</a>
+            <a target="_blank" href="notes-app/index.html">4) Notes App</a>
+        </li>
+        <li><a target="_blank" href="todo-app/index.html">5) ToDo App</a></li>
+        <li>
+            <a target="_blank" href="movie-app/index.html">6) Movies App</a>
         </li>
         <li>
-            <a target="_blank" href="drawing-app/index.html">Drawing App</a>
+            <a target="_blank" href="github-profiles/index.html">7) GitHub Profiles</a>
         </li>
         <li>
-            <a target="_blank" href="password-generator/index.html">Password Generator</a>
+            <a target="_blank" href="drawing-app/index.html">8) Drawing App</a>
         </li>
         <li>
-            <a target="_blank" href="weather-app/index.html">Weather App</a>
+            <a target="_blank" href="password-generator/index.html">9) Password Generator</a>
+        </li>
+        <li>
+            <a target="_blank" href="weather-app/index.html">10) Weather App</a>
         </li>
     </ul>
 
