--- a/3_BACK_PHP/02_forms/certoPOST/index.html
+++ b/3_BACK_PHP/02_forms/certoPOST/index.html
@@ -10,12 +10,13 @@
         * {
             text-align: center;
             font-size: xx-large;
-            margin-top: 3rem;
+            margin-top: 2rem;
         }
     </style>
 </head>
 
 <body>
+    <p>POST</p>
     <form action="form.php" method="post">
         login: <input type="text" name="login"><br>
         senha: <input type="password" name="senha"><br>
