--- a/ola_mundo.html
+++ b/ola_mundo.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá Mundo</title>
+    <style>
+        h2 {
+            text-align: center;
+            font-size: 4rem;
+        }
+    </style>
 </head>
 
 <body>
-    <h2 style="text-align: center;">Olá Mundo</h2>
+    <h2>Olá Mundo</h2>
     <script>
         console.log("Olá Mundo");
     </script>
