--- a/1_FRONT_HTML+CSS/projetos/1_HTML_CSS_JS_WEBPAGE_FULL/tech.html
+++ b/1_FRONT_HTML+CSS/projetos/1_HTML_CSS_JS_WEBPAGE_FULL/tech.html
@@ -63,7 +63,7 @@
                 <h1>NOSSAS</h1>
                 <h2>TECNOLOGIAS</h2>
                 <p>HTML/CSS/JS+React</p>
-                <p>PHP/Node/Python/Java/C</p>
+                <p>PHP/Node/Python</p>
                 <p>MySQL/MongoDB</p>
                 <p>AWS/Heroku</p>
                 <!-- <button class="main__btn">
