--- a/0_temp_conding/00_CSS/p0 v3_content/index.html
+++ b/0_temp_conding/00_CSS/p0 v3_content/index.html
@@ -49,6 +49,82 @@
                 </p>
                 <br>
             </div>
+            <div class="content">
+                <br>
+                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                    Ut auctor id libero
+                    non
+                    congue. Morbi lacinia
+                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
+                    volutpat
+                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
+                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
+                    varius.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
+                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
+                </p>
+                <br>
+            </div>
+            <div class="content">
+                <br>
+                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                    Ut auctor id libero
+                    non
+                    congue. Morbi lacinia
+                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
+                    volutpat
+                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
+                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
+                    varius.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
+                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
+                </p>
+                <br>
+            </div>
+            <div class="content">
+                <br>
+                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                    Ut auctor id libero
+                    non
+                    congue. Morbi lacinia
+                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
+                    volutpat
+                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
+                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
+                    varius.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
+                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
+                </p>
+                <br>
+            </div>
+            <div class="content">
+                <br>
+                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                    Ut auctor id libero
+                    non
+                    congue. Morbi lacinia
+                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
+                    volutpat
+                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
+                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
+                    varius.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
+                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
+                </p>
+                <br>
+            </div>
         </div>
         <div class="nav-right">
             <br>
