--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v4_content/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v4_content/index.html
@@ -25,7 +25,16 @@
         <div class="nav-left">
             <br>
             <p style="text-align: center;">nav-left</p>
-            <br>
+
+            <div class="content">
+                <p style="text-align: justify; margin: 1rem;">teste</p>
+            </div>
+            <div class="content">
+                <p style="text-align: justify; margin: 1rem;">teste</p>
+            </div>
+            <div class="content">
+                <p style="text-align: justify; margin: 1rem;">teste</p>
+            </div>
         </div>
         <div class="main-content">
             <br>
@@ -129,11 +138,22 @@
         <div class="nav-right">
             <br>
             <p style="text-align: center;">nav-right</p>
-            <br>
+
+            <div class="content">
+                <p style="text-align: justify; margin: 1rem;">teste</p>
+            </div>
+            <div class="content">
+                <p style="text-align: justify; margin: 1rem;">teste</p>
+            </div>
+            <div class="content">
+                <p style="text-align: justify; margin: 1rem;">teste</p>
+            </div>
         </div>
-        <div class="footer">
+        <div class=" footer">
             <br>
             <p style="text-align: center;">footer</p>
+            <p style="text-align: center; margin: 1rem;">Copyright © hugonbr 2022
+            </p>
             <br>
         </div>
     </div>
