--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v4_content/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v4_content/index.html
@@ -13,12 +13,12 @@
     <div class="container">
         <div class="header">
             <br>
-            <p style="text-align: center;">header</p>
+            <p style="text-align: center; font-size: 3rem;">SITE</p>
             <br>
             <ul style="margin: 1rem;">
                 <li>Início</li>
-                <li>Item2</li>
-                <li>Item3</li>
+                <li>Matérias</li>
+                <li>Contatos</li>
                 <li class="sobre">Sobre</li>
             </ul>
         </div>
@@ -41,6 +41,8 @@
             <p style="text-align: center;">main-content</p>
             <div class="content">
                 <br>
+                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                    align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
                     Ut auctor id libero
@@ -60,6 +62,8 @@
             </div>
             <div class="content">
                 <br>
+                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                    align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
                     Ut auctor id libero
@@ -79,6 +83,8 @@
             </div>
             <div class="content">
                 <br>
+                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                    align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
                     Ut auctor id libero
@@ -98,6 +104,8 @@
             </div>
             <div class="content">
                 <br>
+                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                    align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
                     Ut auctor id libero
@@ -117,6 +125,8 @@
             </div>
             <div class="content">
                 <br>
+                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                    align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
                     Ut auctor id libero
@@ -134,6 +144,28 @@
                 </p>
                 <br>
             </div>
+            <div class="content">
+                <br>
+                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                    align="left">
+                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                    Ut auctor id libero
+                    non
+                    congue. Morbi lacinia
+                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
+                    volutpat
+                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
+                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
+                    varius.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
+                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
+                </p>
+                <br>
+            </div>
+
         </div>
         <div class="nav-right">
             <br>
