--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v4_content/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v4_content/index.html
@@ -39,9 +39,10 @@
         <div class="main-content">
             <br>
             <p style="text-align: center;">main-content</p>
+
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -62,7 +63,7 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -83,7 +84,7 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -104,7 +105,7 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -125,7 +126,7 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -146,7 +147,7 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js.png" alt="" width="300px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
