--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v5_web_dev/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v5_web_dev/index.html
@@ -20,10 +20,10 @@
                 <li> <a class="nav-item" href="#">Início</a> </li>
                 <!-- <li>Matérias</li> -->
                 <li> <a class="nav-item" href="https://github.com/hugonbr">Github</a> </li>
-                <!-- <li>Contatos</li> -->
-                <li> <a class="nav-item" href="#footer">Contato</a> </li>
                 <!-- <li class="sobre">Sobre</li> -->
-                <li id="about"> <a class="nav-item" href="#sobre">Sobre</a> </li>
+                <li class="about"> <a class="nav-item" href="#sobre">Sobre</a> </li>
+                <!-- <li>Contatos</li> -->
+                <li class="about"> <a class="nav-item" href="#footer">Contato</a> </li>
 
             </ul>
         </div>
@@ -47,47 +47,7 @@
 
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
-                    align="left">
-                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit.
-                    Ut auctor id libero
-                    non
-                    congue. Morbi lacinia
-                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
-                    volutpat
-                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
-                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
-                    varius.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
-                    consectetur
-                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
-                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
-                </p>
-                <br>
-            </div>
-            <div class="content">
-                <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
-                    align="left">
-                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit.
-                    Ut auctor id libero
-                    non
-                    congue. Morbi lacinia
-                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
-                    volutpat
-                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
-                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
-                    varius.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
-                    consectetur
-                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
-                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
-                </p>
-                <br>
-            </div>
-            <div class="content">
+                <p style="text-align: center;">Título</p>
                 <br>
                 <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left">
@@ -189,11 +149,13 @@
         </div>
         <div class="footer" id="footer">
             <br>
-            <p style="text-align: center;">footer</p>
-            <p style="text-align: center;">ADC WPP</p>
+            <p style="text-align: center;">Meus Contatos:</p>
+            <p style="text-align: center;">☎️ (88)998100156</p>
+            <p style="text-align: center;">📪 hugonbr@gmail.com</p>
+            <br>
             <p style="text-align: center; margin: 1rem;">Copyright © hugonbr 2022
             </p>
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            <button onclick="topFunction()" id="myBtn" title="Go to top"> 🔼 </button>
             <br>
         </div>
     </div>
