--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/index.html
@@ -29,27 +29,57 @@
         </div>
         <div class="nav-left">
             <br>
-            <p style="text-align: center;">nav-left</p>
+            <p style="text-align: center;">Tópicos</p>
 
             <div class="content">
-                <p style="text-align: justify; margin: 1rem;">teste</p>
+                <p style="text-align: center; margin: 1rem;">HTML</p>
             </div>
             <div class="content">
-                <p style="text-align: justify; margin: 1rem;">teste</p>
+                <p style="text-align: center; margin: 1rem;">CSS</p>
             </div>
             <div class="content">
-                <p style="text-align: justify; margin: 1rem;">teste</p>
+                <p style="text-align: center; margin: 1rem;">JS</p>
+            </div>
+            <div class="content">
+                <p style="text-align: center; margin: 1rem;">Backend</p>
             </div>
         </div>
         <div class="main-content">
             <br>
-            <p style="text-align: center;">main-content</p>
+            <p style="text-align: center;">WEB TECHS</p>
 
             <div class="content">
                 <br>
-                <p style="text-align: center;">Título</p>
+                <p style="text-align: center;">HTML</p>
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                <!-- <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                    align="left"> -->
+                <img style="margin: 2rem;" src="assets/img/kisspng-web-development-html.png" alt="" width="200px"
+                    height="200px" align="left">
+                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit.
+                    Ut auctor id libero
+                    non
+                    congue. Morbi lacinia
+                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
+                    volutpat
+                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
+                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
+                    varius.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
+                    consectetur
+                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
+                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
+                </p>
+                <br>
+            </div>
+            <div class="content">
+                <br>
+                <p style="text-align: center;">CSS</p>
+                <br>
+                <!-- <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                    align="left"> -->
+                <img style="margin: 3.6rem;" src="assets/img/pngaaa.com-css.png" alt="" width="150px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -70,7 +100,11 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                <p style="text-align: center;">Javascript(JS)</p>
+                <br>
+                <!-- <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                    align="left"> -->
+                <img style="margin: 2rem;" src="assets/img/pngwing.com-js.png" alt="" width="200px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -91,7 +125,11 @@
             </div>
             <div class="content">
                 <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                <p style="text-align: center;">Backend</p>
+                <br>
+                <!-- <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
+                    align="left"> -->
+                <img style="margin: 2rem;" src="assets/img/pngwing.com-terminal.png" alt="" width="200px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -110,42 +148,17 @@
                 </p>
                 <br>
             </div>
-            <div class="content">
-                <br>
-                <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
-                    align="left">
-                <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit.
-                    Ut auctor id libero
-                    non
-                    congue. Morbi lacinia
-                    quis libero at iaculis. Ut et tempus ipsum, et cursus odio. Ut est nibh, finibus ut erat et,
-                    volutpat
-                    vestibulum sapien. Phasellus leo nunc, varius eget nibh ut, gravida vulputate tellus. Nullam magna
-                    felis, interdum ut arcu eu, bibendum tincidunt turpis. Aliquam suscipit lacus sed sapien tempor
-                    varius.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus. Lorem ipsum dolor sit amet,
-                    consectetur
-                    adipiscing elit. Integer molestie pulvinar est, id viverra mi congue quis. Cras sed est auctor,
-                    venenatis nisl eget, convallis turpis. Pellentesque sit amet congue velit.
-                </p>
-                <br>
-            </div>
+
 
         </div>
         <div class="nav-right" id="sobre">
             <br>
-            <p style="text-align: center;">nav-right</p>
+            <p style="text-align: center;">Sobre</p>
 
             <div class="content">
                 <p style="text-align: justify; margin: 1rem;">teste</p>
             </div>
-            <div class="content">
-                <p style="text-align: justify; margin: 1rem;">teste</p>
-            </div>
-            <div class="content">
-                <p style="text-align: justify; margin: 1rem;">teste</p>
-            </div>
+
         </div>
         <div class="footer" id="footer">
             <br>
@@ -155,7 +168,7 @@
             <br>
             <p style="text-align: center; margin: 1rem;">Copyright © hugonbr 2022
             </p>
-            <button onclick="topFunction()" id="myBtn" title="Go to top"> 🔼 </button>
+            <button onclick="topFunction()" id="myBtn" title="Go to top"> ⬆️ </button>
             <br>
         </div>
     </div>
