--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/index.html
@@ -54,8 +54,8 @@
                 <br>
                 <!-- <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left"> -->
-                <img style="margin: 2rem;" src="assets/img/kisspng-web-development-html.png" alt="" width="200px"
-                    height="200px" align="left">
+                <img style="margin: 2rem;" src="assets/img/new/html-5.png" alt="" width="200px" height="200px"
+                    align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
                     Ut auctor id libero
@@ -79,7 +79,7 @@
                 <br>
                 <!-- <img style="margin: 2rem;" src="assets/img/html-css-js-removebg.png" alt="" width="300px" height="200px"
                     align="left"> -->
-                <img style="margin: 3.6rem;" src="assets/img/pngaaa.com-css.png" alt="" width="150px" height="200px"
+                <img style="margin: 2rem;" src="assets/img/new/css-3.png" alt="" width="200px" height="200px"
                     align="left">
                 <p style="text-align: justify; margin: 2rem;"> Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit.
@@ -156,7 +156,8 @@
             <p style="text-align: center;">Sobre</p>
 
             <div class="content">
-                <p style="text-align: justify; margin: 1rem;">teste</p>
+                <p style="text-align: justify; margin: 1rem;">Este é um site responsivo apenas com HTML, CSS e
+                    Javascript.<br><br>Tecnologias utilizadas: viewport, grid e media queries.</p>
             </div>
 
         </div>
