--- a/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/index.html
+++ b/0_temp_conding/00_CSS/p0_SiteResponsivoGrid/p0 v6_web_dev/index.html
@@ -27,28 +27,28 @@
 
             </ul>
         </div>
-        <div class="nav-left">
+        <div class="nav-left" id="topicos">
             <br>
             <p style="text-align: center;">Tópicos</p>
 
             <div class="content">
-                <p style="text-align: center; margin: 1rem;">HTML</p>
+                <p style="text-align: center; margin: 1rem;"><a class="nav-item" href="#html-content">HTML</a></p>
             </div>
             <div class="content">
-                <p style="text-align: center; margin: 1rem;">CSS</p>
+                <p style="text-align: center; margin: 1rem;"><a class="nav-item" href="#css-content">CSS</a></p>
             </div>
             <div class="content">
-                <p style="text-align: center; margin: 1rem;">JS</p>
+                <p style="text-align: center; margin: 1rem;"><a class="nav-item" href="#js-content">JS</a></p>
             </div>
             <div class="content">
-                <p style="text-align: center; margin: 1rem;">Backend</p>
+                <p style="text-align: center; margin: 1rem;"><a class="nav-item" href="#backend-content">Backend</a></p>
             </div>
         </div>
         <div class="main-content">
             <br>
             <p style="text-align: center;">WEB TECHS</p>
 
-            <div class="content">
+            <div class="content" id="html-content">
                 <br>
                 <p style="text-align: center;">HTML</p>
                 <br>
@@ -73,7 +73,7 @@
                 </p>
                 <br>
             </div>
-            <div class="content">
+            <div class="content" id="css-content">
                 <br>
                 <p style="text-align: center;">CSS</p>
                 <br>
@@ -98,7 +98,7 @@
                 </p>
                 <br>
             </div>
-            <div class="content">
+            <div class="content" id="js-content">
                 <br>
                 <p style="text-align: center;">Javascript(JS)</p>
                 <br>
@@ -123,7 +123,7 @@
                 </p>
                 <br>
             </div>
-            <div class="content">
+            <div class="content" id="backend-content">
                 <br>
                 <p style="text-align: center;">Backend</p>
                 <br>
@@ -169,7 +169,9 @@
             <br>
             <p style="text-align: center; margin: 1rem;">Copyright © hugonbr 2022
             </p>
+            <!-- <button onclick="topFunction()" id="myBtn" title="Go to top"> ⬆️ </button> -->
             <button onclick="topFunction()" id="myBtn" title="Go to top"> ⬆️ </button>
+            <a class="nav-item" href="#topicos"><button id="myBtn2" title="Go to top"> MENU </button></a>
             <br>
         </div>
     </div>
