--- a/0_temp_conding/00_webdev/00_OlaMundo_CenterForm/index.html
+++ b/0_temp_conding/00_webdev/00_OlaMundo_CenterForm/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <div class="container">
-        <p>Teste</p>
+        <p style="margin: 1rem;">Teste</p>
         <input type="text" placeholder="login"><br>
         <input type="text" placeholder="senha"><br>
-        <button> &nbsp&nbspEntrar&nbsp&nbsp </button>
+        <button class="b-primary"> &nbsp&nbspEntrar&nbsp&nbsp </button>
     </div>
 
     <script src="app.js"></script>
