--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
@@ -28,6 +28,7 @@
         </div>
     </div>
 
+    <a href="/8_OpenSource_ALL/SISCRUD/frontend/">Atalho Login</a>
     <p>Copyright © hugonbr 2022</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
