--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
@@ -21,10 +21,34 @@
     <div id="sistema">
         <div id="form">
             <h1>CRUD</h1>
-            <br><input style="width: 100%; height: 40px;" type="text" placeholder="usuário"><br>
-            <br><input style="width: 100%; height: 40px;" type="password" placeholder="senha"><br>
-            <br><button id="btn-entrar">ENTRAR</button><br>
-            <br><a href="#">Não possui uma conta?<br>Cadastre-se aqui!</a>
+            <br>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td><button class="btn-editar">Editar</button></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td><button class="btn-editar">Editar</button></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
