--- a/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
+++ b/8_OpenSource_ALL/SISCRUD/frontend/crud/index.html
@@ -25,31 +25,54 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                        <th scope="col">Actions</th>
+                        <th scope="col">#ID</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Sobrenome</th>
+                        <th scope="col">email</th>
+                        <th scope="col">ações</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td><button class="btn-editar">Editar</button></td>
+                        <td>Hugo</td>
+                        <td>Régis</td>
+                        <td>hugo@email.com</td>
+                        <td><button class="btn-ver">VER</button>&emsp;<button
+                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td><button class="btn-editar">Editar</button></td>
+                        <td>Amet</td>
+                        <td>Alias</td>
+                        <td>amet@mail</td>
+                        <td><button class="btn-ver">VER</button>&emsp;<button
+                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Elit</td>
+                        <td>Facere</td>
+                        <td>elit@mail</td>
+                        <td><button class="btn-ver">VER</button>&emsp;<button
+                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>Itaque</td>
+                        <td>Velit</td>
+                        <td>itaque@mail</td>
+                        <td><button class="btn-ver">VER</button>&emsp;<button
+                                class="btn-editar">EDITAR</button>&emsp;<button class="btn-excluir">EXCLUIR</button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
+        <button class="btn-cadastrar">CADASTRAR</button>
     </div>
 
     <a href="/8_OpenSource_ALL/SISCRUD/frontend/">Atalho Login</a>
